--- a/WebApplication4/WebApplication4/Views/Ventas/BuscaReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/BuscaReserva.cshtml
@@ -28,93 +28,98 @@
 </div>
 
 <div class="container">
-    <div class="row ">
-        <div class="col-md-1">
+    <div class="row">
+        <div class="col-md-1 col-sm-6">
             <label for="dni" class="control-label">Tipo Doc:</label>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-6">
             <select class="form-control" name="" id="comboBusq">
                 <option value="0">Ambos</option>
                 <option value="1">DNI</option>
                 <option value="2">Pasaporte</option>
             </select>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-6">
             <label for="dni" class="control-label">N° Documento:</label>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-6">
             <div class="input-group">
                 <input id="idBusq" type="text" class="form-control">
                 <span class="input-group-btn"><button onclick="busca()" class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
             </div>
         </div>
-        @*si existe un turno y la caja para ese turno esta abierta aparece la opcion para pagar reserva*@
-        @if (tu != null && tu.estadoCaja == "Abierto") 
-        {
-            <div class="col-md-3 ">
-                <a onclick="redirigeReserva()" class="btn btn-primary pull-right"><span class="fa fa-money fa-lg"></span> Pagar reserva</a>
-            </div>
-        }
-        else
-        {
-            if (tu == null)
-            {
-                <h6>Debes tener un Turno</h6>
-            }
-            else
-            {
-                if (tu.estadoCaja != "Abierto")
+        <div class="col-md-5">
+            <div class="row">
+                @*si existe un turno y la caja para ese turno esta abierta aparece la opcion para pagar reserva*@
+                @if (tu != null && tu.estadoCaja == "Abierto")
                 {
-                    <h6>Caja debe estar Abierta</h6>
+                    <center>
+                        <a onclick="redirigeReserva()" class="btn btn-primary"><span class="fa fa-money fa-lg"></span> Pagar reserva</a>
+                    </center>
                 }
-            }
-        }
-        <div class="col-md-2">
-            @*<a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
-        </div>
-    </div>
-
-
-    <div class="row">
-        <h4>Resultados:</h4>
-        <div class="table-responsive">
-            <table id="mytable" class="table table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th class="col-md-2">Código Reserva</th>
-                        <th class="col-md-3">Nombre</th>
-                        <th class="col-md-1">N° Doc</th>
-                        <th class="col-md-3">Evento</th>
-                        <th class="col-md-2">Cantidad Entradas</th>
-                        <th class="col-md-1">Total (S/.)</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody">
-                    @if (listaReserva != null)
+                else
+                {
+                    if (tu == null)
                     {
-                        //se muestra el resultado de la lista de reserva que se obtuvo de la busqueda si es que ya hubo una busqueda
-                        foreach (var row in listaReserva)
+                        <h6>Debe tener un turno</h6>
+                    }
+                    else
+                    {
+                        if (tu.estadoCaja != "Abierto")
                         {
-                            <tr id=@row.codVen onclick="myFunction(this)">
-                                <td>@row.codVen</td>
-                                @{
-                                    Ventas ve = db.Ventas.Find(row.codVen);
-                                    Funcion fu = db.Funcion.Find(row.codFuncion);
-                                }
-                                <td>@db.CuentaUsuario.Find(ve.cliente).nombre @db.CuentaUsuario.Find(ve.cliente).apellido</td>
-                                <td>@ve.codDoc</td>
-                                <td>@db.Eventos.Find(fu.codEvento).nombre</td>
-                                <td>@row.cantEntradas</td>
-                                <td>@ve.MontoTotalSoles</td>
-                            </tr>
+                            <h6>La caja no ha sido abierta.</h6>
                         }
                     }
-                </tbody>
-            </table>
+                } 
+            </div>
         </div>
-    </div><br>
+              
+    </div><br />    
+    <div class="row">
+        <div class="col-md-12">
+            <h4>Resultados:</h4>
+            <div class="table-responsive">
+                <table id="mytable" class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th class="col-md-2">Código Reserva</th>
+                            <th class="col-md-3">Nombre</th>
+                            <th class="col-md-1">N° Doc</th>
+                            <th class="col-md-3">Evento</th>
+                            <th class="col-md-2">Cantidad Entradas</th>
+                            <th class="col-md-1">Total (S/.)</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbody">
+                        @if (listaReserva != null)
+                        {
+                            //se muestra el resultado de la lista de reserva que se obtuvo de la busqueda si es que ya hubo una busqueda
+                            foreach (var row in listaReserva)
+                            {
+                                <tr id=@row.codVen onclick="myFunction(this)">
+                                    <td>@row.codVen</td>
+                                    @{
+                                Ventas ve = db.Ventas.Find(row.codVen);
+                                Funcion fu = db.Funcion.Find(row.codFuncion);
+                                    }
+                                    <td>@db.CuentaUsuario.Find(ve.cliente).nombre @db.CuentaUsuario.Find(ve.cliente).apellido</td>
+                                    <td>@ve.codDoc</td>
+                                    <td>@db.Eventos.Find(fu.codEvento).nombre</td>
+                                    <td>@row.cantEntradas</td>
+                                    <td>@ve.MontoTotalSoles</td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-</div>
+
+    </div><br>
+    
+
+    </div>
 
 <input type="hidden" id="codVenT" value="" />
 <script>
@@ -156,8 +161,3 @@
     }
 
 </script>
-<style>
-    .trselected {
-        background: gray;
-    }
-</style>
