--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -516,7 +516,7 @@
                 $("#formTieneEntradas").val("" + listaAsientos[index].tieneAsientos);
                 $("#formTieneEntradas").attr("value", listaAsientos[index].tieneAsientos);
                 $("#numEntradas").val(0);
-                $("#numEntradas").prop('disabled', true);
+                $("#numEntradas").prop('readonly', true);
             }
             else {
 
