--- a/WebApplication4/WebApplication4/Views/Ventas/Entrega.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Entrega.cshtml
@@ -61,13 +61,17 @@
                 {
                     if (tu == null)
                     {
-                        <h6>Debes tener un Turno</h6>
+                        <center>
+                            <h6>Debe tener un turno</h6>
+                        </center>
                     }
                     else
                     {
                         if (tu.estadoCaja != "Abierto")
                         {
-                            <h6>Caja debe estar Abierta</h6>
+                            <center>
+                                <h6>La caja no ha sido abierta.</h6>
+                            </center>
                         }
                     }
                 }
